# redis-copier

./: README.md  redis-copier.cabal  stack.yaml
src/: Main.hs
