name:                redis-copier
version:             0.1.0.0
synopsis:            redis-copier copy all data between two databases.
-- description:
homepage:            https://github.com/andor0/redis-copier/blob/master/README.md
license:             BSD3
license-file:        LICENSE
author:              Andrei Orlov
maintainer:          aaorlov1@gmail.com
copyright:           2017 Author name here
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable redis-copier
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative,
                       hedis
